<resources>
    <string name="app_name">Dira La Biashara</string>
    <string name="SHARED_PREFERENCES">com.example.lovidovi.utils.sharedpref</string>
    <string name="CLIENTS_PHONE">com.example.lovidovi.utils.sharedpref.phone</string>
    <string name="CLIENTS_EMAIL">com.example.lovidovi.utils.sharedpref.email</string>
    <string name="CLIENTS_TOKEN">com.example.lovidovi.utils.sharedpref.accessToken</string>
    <string name="CLIENTS_STATUS">com.example.lovidovi.utils.sharedpref.status</string>
    <string name="POD">com.example.lovidovi.utils.sharedpref.podcast</string>


    <string name="about">Dira La Biashara App is a property of iGrand Business Plans Limited. We are specialists in tax advisory, outsourced accounting, Startup fundraising and business plan development. We have collaborated with other consultancy firms to make this application a one-stop shop for the following business support services.</string>

    <string name="serverError">Oh no!\nA server error has occurred.Ensure you are connected then retry.</string>
    <string name="netwrokError">Oh no!\nA network error has occurred.Ensure you are connected then retry.</string>
    <string name="banner">289505809176116_289510825842281</string>
    <string name="interstitial">289505809176116_289511939175503</string>
    <string name="main_page_selected">%s page is selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="paranthesis">( )</string>
    <string name="divid">÷</string>
    <string name="percent">%</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspac"> </string>
    <string name="display">Enter in a value</string>
    <string name="engage">Engage us for any of the above listed services via WhatsApp by clicking the below button</string>


    <string name="clearTxt">C</string>
    <string name="percentageSymbol">%</string>
    <string name="backspace">\u232b</string>
    <string name="divide">÷</string>
    <string name="sevenNum">7</string>
    <string name="eightNum">8</string>
    <string name="nineNum">9</string>
    <string name="multiplySymbol">×</string>
    <string name="fourNum">4</string>
    <string name="fiveNum">5</string>
    <string name="sixNum">6</string>
    <string name="minusSymbol">-</string>
    <string name="oneNum">1</string>
    <string name="twoNum">2</string>
    <string name="threeNum">3</string>
    <string name="plusSymbol">+</string>
    <string name="multiplyBy100">00</string>
    <string name="zeroNum">0</string>
    <string name="dotSymbol">.</string>
    <string name="equalsSymbol">=</string>
</resources>