<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/arrow_back"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_round_arrow_back"/>
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#dd2c00"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/paranthesis"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="parBTN"
                android:text="@string/paranthesis"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
            <ImageButton
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/circleclear"
                android:contentDescription="@string/backspace"
                android:onClick="backSpaceBTN"
                app:srcCompat="@drawable/circle" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="percentBTN"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/substract"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plusminus"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="plusminusBTN"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#263238"
                android:onClick="decimalBTN"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#43a047"
                android:onClick="equalBTN"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:textColor="@color/purple_700"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="36sp"
        tools:ignore="LabelFor"
        android:textAlignment="textEnd"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="0dp"
        android:id="@+id/result"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="36sp"
        android:textColor="@color/purple_700"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>